--- a/week3/test/here.ipynb
+++ b/week3/test/here.ipynb
@@ -107,14 +107,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/codespace/.python/current/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "* Running on local URL:  http://127.0.0.1:7866\n",
+      "* Running on local URL:  http://127.0.0.1:7864\n",
       "\n",
       "To create a public link, set `share=True` in `launch()`.\n"
      ]
@@ -122,7 +130,7 @@
     {
      "data": {
       "text/html": [
-       "<div><iframe src=\"http://127.0.0.1:7866/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+       "<div><iframe src=\"http://127.0.0.1:7864/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -135,7 +143,7 @@
      "data": {
       "text/plain": []
      },
-     "execution_count": 13,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -168,9 +176,9 @@
       "  File \"/home/codespace/.python/current/lib/python3.12/site-packages/gradio/utils.py\", line 890, in wrapper\n",
       "    response = f(*args, **kwargs)\n",
       "               ^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/tmp/ipykernel_41095/525571115.py\", line 46, in predict_price\n",
-      "    prediction = model.predict(input_df)[0]\n",
-      "                 ^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/tmp/ipykernel_23293/1964141687.py\", line 51, in predict_prices\n",
+      "    pred_mit = model.predict(input_mit_minergie)[0]\n",
+      "               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
       "  File \"/home/codespace/.local/lib/python3.12/site-packages/sklearn/ensemble/_forest.py\", line 1065, in predict\n",
       "    X = self._validate_X_predict(X)\n",
       "        ^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
@@ -182,76 +190,123 @@
       "  File \"/home/codespace/.local/lib/python3.12/site-packages/sklearn/utils/validation.py\", line 2777, in _check_feature_names\n",
       "    raise ValueError(message)\n",
       "ValueError: The feature names should match those that were passed during fit.\n",
-      "Feature names unseen at fit time:\n",
-      "- latitude\n",
-      "- longitude\n",
       "Feature names seen at fit time, yet now missing:\n",
-      "- lat\n",
-      "- lon\n",
+      "- dist_zuerich\n",
+      "- minergie_dichte\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/codespace/.python/current/lib/python3.12/site-packages/gradio/queueing.py\", line 625, in process_events\n",
+      "    response = await route_utils.call_process_api(\n",
+      "               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/home/codespace/.python/current/lib/python3.12/site-packages/gradio/route_utils.py\", line 322, in call_process_api\n",
+      "    output = await app.get_blocks().process_api(\n",
+      "             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/home/codespace/.python/current/lib/python3.12/site-packages/gradio/blocks.py\", line 2108, in process_api\n",
+      "    result = await self.call_function(\n",
+      "             ^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/home/codespace/.python/current/lib/python3.12/site-packages/gradio/blocks.py\", line 1655, in call_function\n",
+      "    prediction = await anyio.to_thread.run_sync(  # type: ignore\n",
+      "                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/home/codespace/.local/lib/python3.12/site-packages/anyio/to_thread.py\", line 56, in run_sync\n",
+      "    return await get_async_backend().run_sync_in_worker_thread(\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/home/codespace/.local/lib/python3.12/site-packages/anyio/_backends/_asyncio.py\", line 2505, in run_sync_in_worker_thread\n",
+      "    return await future\n",
+      "           ^^^^^^^^^^^^\n",
+      "  File \"/home/codespace/.local/lib/python3.12/site-packages/anyio/_backends/_asyncio.py\", line 1005, in run\n",
+      "    result = context.run(func, *args)\n",
+      "             ^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/home/codespace/.python/current/lib/python3.12/site-packages/gradio/utils.py\", line 890, in wrapper\n",
+      "    response = f(*args, **kwargs)\n",
+      "               ^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/tmp/ipykernel_23293/1964141687.py\", line 51, in predict_prices\n",
+      "    pred_mit = model.predict(input_mit_minergie)[0]\n",
+      "               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/home/codespace/.local/lib/python3.12/site-packages/sklearn/ensemble/_forest.py\", line 1065, in predict\n",
+      "    X = self._validate_X_predict(X)\n",
+      "        ^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/home/codespace/.local/lib/python3.12/site-packages/sklearn/ensemble/_forest.py\", line 638, in _validate_X_predict\n",
+      "    X = validate_data(\n",
+      "        ^^^^^^^^^^^^^^\n",
+      "  File \"/home/codespace/.local/lib/python3.12/site-packages/sklearn/utils/validation.py\", line 2919, in validate_data\n",
+      "    _check_feature_names(_estimator, X, reset=reset)\n",
+      "  File \"/home/codespace/.local/lib/python3.12/site-packages/sklearn/utils/validation.py\", line 2777, in _check_feature_names\n",
+      "    raise ValueError(message)\n",
+      "ValueError: The feature names should match those that were passed during fit.\n",
+      "Feature names seen at fit time, yet now missing:\n",
+      "- dist_zuerich\n",
+      "- minergie_dichte\n",
       "\n"
      ]
     }
    ],
    "source": [
+    "import gradio as gr\n",
     "import pandas as pd\n",
     "import joblib\n",
-    "import gradio as gr\n",
     "\n",
-    "# Modell laden\n",
-    "model = joblib.load('model_minergie.pkl')\n",
+    "# 🔹 Daten laden\n",
+    "model = joblib.load(\"/workspaces/ai-applications-fs25/week2/test copy/fast_model_minergie.pkl\")\n",
+    "apartments = pd.read_csv(\"/workspaces/ai-applications-fs25/week2/test copy/original_apartment_data_analytics_hs24_with_lat_lon.csv\")\n",
+    "minergie_plz = pd.read_csv(\"/workspaces/ai-applications-fs25/week2/test copy/plz_häufigkeit.csv\")\n",
     "\n",
-    "# Apartments-Daten laden (für Koordinaten)\n",
-    "apartments = pd.read_csv(\"original_apartment_data_analytics_hs24_with_lat_lon.csv\")\n",
+    "# 🔹 Sicherstellen, dass PLZ als Integer behandelt wird\n",
+    "apartments['postalcode'] = apartments['postalcode'].astype(int)\n",
+    "minergie_plz['PLZ'] = minergie_plz['PLZ'].astype(int)\n",
     "\n",
-    "# Minergie-Daten laden und aufbereiten\n",
-    "minergie = pd.read_csv(\"ogd91_minergiegebaeude_pro_gemeinde.csv\")\n",
-    "minergie['minergie_total'] = (\n",
-    "    minergie['Minergie'] +\n",
-    "    minergie['Minergie_Eco'] +\n",
-    "    minergie['Minergie_A'] +\n",
-    "    minergie['Minergie_A_Eco'] +\n",
-    "    minergie['Minergie_P'] +\n",
-    "    minergie['Minergie_P_Eco']\n",
-    ")\n",
+    "# 🔹 Mapping von Ort zu PLZ\n",
+    "gemeinden_df = apartments[['postalcode', 'town']].drop_duplicates().sort_values('town')\n",
+    "gemeinde_options = dict(zip(gemeinden_df['town'], gemeinden_df['postalcode']))\n",
     "\n",
-    "# Gemeindeliste vorbereiten (Name -> BFS)\n",
-    "gemeinden_df = apartments[['bfs_number', 'town']].drop_duplicates().sort_values('town')\n",
-    "gemeinde_options = dict(zip(gemeinden_df['town'], gemeinden_df['bfs_number']))\n",
+    "beschreibung = \"\"\"\n",
+    "🏡 **Wohnungspreis-Vorhersage mit Minergie-Feature**\n",
     "\n",
-    "# Vorhersagefunktion\n",
-    "def predict_price(area, rooms, gemeinde_name):\n",
-    "    bfs_number = gemeinde_options[gemeinde_name]\n",
+    "🔹 Wähle **Wohnfläche, Zimmeranzahl & Gemeinde**  \n",
+    "🔹 Die App berechnet **zwei Preise**:\n",
+    "  - ✅ **Mit Minergie** (berücksichtigt energieeffiziente Gebäude)\n",
+    "  - ⚡ **Ohne Minergie** (keine Minergie-Gebäude berücksichtigt)\n",
     "\n",
-    "    # Minergie-Wert abrufen\n",
-    "    minergie_value = minergie.loc[minergie['BfsNumber'] == bfs_number, 'minergie_total'].values\n",
-    "    minergie_total = minergie_value[0] if len(minergie_value) > 0 else minergie['minergie_total'].mean()\n",
+    "📊 Alle Daten basieren auf den hochgeladenen CSV-Dateien!\n",
+    "\"\"\"\n",
     "\n",
-    "    # Durchschnittliche Koordinaten der Gemeinde berechnen\n",
-    "    coords = apartments.loc[apartments['bfs_number'] == bfs_number, ['lat', 'lon']].mean()\n",
+    "# 🔹 Funktion zur Preisvorhersage\n",
+    "def predict_prices(area, rooms, ort):\n",
+    "    postalcode = gemeinde_options[ort]\n",
     "\n",
-    "    # Input für das Modell vorbereiten\n",
-    "    input_df = pd.DataFrame([{\n",
+    "    # Daten aus den geladenen CSV-Dateien abrufen\n",
+    "    coords = apartments.loc[apartments['postalcode'] == postalcode, ['lat', 'lon']].mean()\n",
+    "    minergie_count = minergie_plz.loc[minergie_plz['PLZ'] == postalcode, 'Häufigkeit'].values\n",
+    "    minergie_count = minergie_count[0] if len(minergie_count) else 0  # Falls kein Wert vorhanden ist\n",
+    "\n",
+    "    # Modell-Eingaben vorbereiten\n",
+    "    input_mit_minergie = pd.DataFrame([{\n",
     "        'area': area,\n",
     "        'rooms': rooms,\n",
-    "        'latitude': coords['lat'],\n",
-    "        'longitude': coords['lon'],\n",
-    "        'minergie_total': minergie_total\n",
+    "        'lat': coords['lat'],\n",
+    "        'lon': coords['lon'],\n",
+    "        'minergie_anteil': minergie_count\n",
     "    }])\n",
     "\n",
-    "    prediction = model.predict(input_df)[0]\n",
-    "    return f\"🟢 Geschätzter Wohnungspreis: CHF {prediction:.2f}\"\n",
+    "    input_ohne_minergie = input_mit_minergie.copy()\n",
+    "    input_ohne_minergie['minergie_anteil'] = 0  # Minergie deaktivieren\n",
     "\n",
-    "# Gradio Interface\n",
+    "    # Vorhersagen berechnen\n",
+    "    pred_mit = model.predict(input_mit_minergie)[0]\n",
+    "    pred_ohne = model.predict(input_ohne_minergie)[0]\n",
+    "\n",
+    "    return f\"✅ Preis mit Minergie: CHF {pred_mit:.2f}\\n⚡ Preis ohne Minergie: CHF {pred_ohne:.2f}\"\n",
+    "\n",
+    "# 🔹 Gradio Interface\n",
     "iface = gr.Interface(\n",
-    "    fn=predict_price,\n",
+    "    fn=predict_prices,\n",
     "    inputs=[\n",
     "        gr.Number(label=\"Wohnfläche (m²)\"),\n",
     "        gr.Number(label=\"Zimmeranzahl\"),\n",
-    "        gr.Dropdown(choices=list(gemeinde_options.keys()), label=\"Gemeinde\")\n",
+    "        gr.Dropdown(choices=list(gemeinde_options.keys()), label=\"Ort\")\n",
     "    ],\n",
     "    outputs=\"text\",\n",
-    "    title=\"📍 Wohnungspreis-Vorhersage mit Minergie-Feature\",\n",
-    "    description=\"Gib Wohnfläche, Zimmeranzahl und Gemeinde ein. Das Modell berechnet den geschätzten Preis basierend auf Gemeindedaten und Minergie-Gebäuden.\"\n",
+    "    title=\"🏡 Wohnungspreis-Vorhersage (mit & ohne Minergie)\",\n",
+    "    description=beschreibung\n",
     ")\n",
     "\n",
     "iface.launch()\n"
